...
        Pair("pesto", Color.Green),
        Pair("psto", Color.Blue),
        Pair("pest", Color.Green),
        Pair("peest", Color.Green))
  }

  Box(modifier = Modifier.fillMaxSize().testTag("aroundYouProfileScreen")) {
    Scaffold(
        modifier = Modifier.testTag("profileScreen"),
        content = { paddingValues ->
          Column(
              modifier = Modifier.fillMaxWidth().padding(paddingValues),
              horizontalAlignment = Alignment.CenterHorizontally) {
...
    if (sendRequest) {
      Box(
          modifier =
              Modifier.fillMaxSize()
                  .background(Color.Black.copy(alpha = 0.5f))
                  .clickable {}
                  .testTag("bluredBackground"),
          contentAlignment = Alignment.Center) {
            SendRequestScreen(
                onValueChange = { writtenMessage = it },
                value = writtenMessage,
                onSendClick = { sendRequest = false },
                onCancelClick = { sendRequest = false })
...
